plugins {
    id 'application'
    id 'com.gradleup.shadow' version '9.2.0'
    id 'maven-publish'
}


application {
    mainClass = 'io.aether.cli.CLI'
    applicationDefaultJvmArgs = [
        '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
    ]
    applicationName = 'aether-cli'
}


shadowJar {
    archiveFileName.set('aether-cli.jar')
    archiveVersion.set(version.toString())
    manifest {
        attributes 'Main-Class': 'io.aether.cli.CLI'
    }
}

dependencies {
    implementation project(':client')
    implementation("org.slf4j:slf4j-nop:2.0.16")
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'io.aether.crypto:hydrogen-fast:+'
    implementation 'io.aether.crypto:sodium:+'
    implementation 'io.aether:net-netty:+'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}


tasks.register('updateVersion') {
    doLast {
        def fw = new FileWriter(new File(System.getProperty("java.io.tmpdir"), "aether-cli-version.txt"));
        fw.write(version.toString());
        fw.close();
    }
}

processResources {
    dependsOn 'updateVersion'
    from(System.getProperty("java.io.tmpdir") + "/aether-cli-version.txt") {
        into(".")
    }
}

publishing {
    publications {
        mavenPublication(MavenPublication) {
            from components.java
            groupId "io.aether"
            artifactId "cli"
        }
    }
}


// Настройка дистрибутива для использования shadowJar
distributions {
    main {
        contents {
            from shadowJar
            into('lib') {
                rename { 'aether-cli.jar' }
            }
        }
    }
}



// Создаём установочные скрипты в папке дистрибутива
tasks.register('createSetupScripts') {
    dependsOn installDist
    doLast {
        def installDir = file("$buildDir/install/cli")
        
        // Linux/macOS скрипт для добавления в PATH
        def setupSh = file("$installDir/setup.sh")
        setupSh.text = '#!/bin/bash\n# Adds bin to PATH\nSCRIPT_DIR=$(cd "$(dirname "$0")" && pwd)\nexport PATH="$SCRIPT_DIR/bin:$PATH"\necho "export PATH=\"$SCRIPT_DIR/bin:\\$PATH\"" >> ~/.bashrc\necho "Added $SCRIPT_DIR/bin to PATH. Restart terminal or source ~/.bashrc"\n'
        setupSh.setExecutable(true)
        
        // Windows скрипт для добавления в PATH
        def setupBat = file("$installDir/setup.bat")
        setupBat.text = '@echo off\r\nsetx PATH "%~dp0bin;%PATH%"\r\necho Added %~dp0bin to PATH. Restart command prompt.\r\n'
    }
}


// Переопределяем distZip, чтобы включить установочные скрипты
distZip {
    dependsOn createSetupScripts
    from(installDist.destinationDir) {
        include 'setup.sh', 'setup.bat'
    }
}


installDist.finalizedBy createSetupScripts